ref #26
Move /stats/symptoms to /symptoms/occurrences
