# app/controllers/symptoms_controller.rb
@@ -10,4 +10,9 @@ class SymptomsController < ApplicationController
     end
     render json: {symptoms: symptoms}, status: 200
   end
+
+  def occurrences
+    @symptoms = Symptom.includes(:occurrences).where(occurrences: {user_id: current_user.id})
+    render json: {symptoms: @symptoms}, :include => [:occurrences], status: 200
+  end
 end
