# config/routes.rb
@@ -3,7 +3,7 @@ Rails.application.routes.draw do
 
   resources :occurrences, :only => [:create]
   resources :symptoms, :only => [:index]
-  get 'stats/symptoms' => 'stats#symptoms'
+  get 'symptoms/occurrences' => 'symptoms#occurrences'
 
   # The priority is based upon order of creation: first created -> highest priority.
   # See how all your routes lay out with "rake routes".
